# expected

./: CMakeLists.txt  CMakePresets.json  Package.cmake  README.md
.github/workflows/: windows-build.yml
include/Expected/: version.h
src/: CMakeLists.txt  expected.cpp
src/include/: Expected.h
tests/: CMakeLists.txt  test_expected.cpp
